[package]
name = "day08"
version = "0.1.0"
authors = ["Laura Lindzey <lindzey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
regex = "1"

[dev-dependencies]
pretty_assertions = "0.6.1"
