[package]
name = "day11"
version = "0.1.0"
authors = ["Laura Lindzey <lindzey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1"

[dev-dependencies]
pretty_assertions = "0.6.1"

